# huffman-arpeggio

./: .gitignore  Corrected_Character_Frequencies_with_Keyswitches.csv  README.md  huffman-arpeggio.py  huffmanizer.py  playstation-huffman-arpeggio.csv  playstation-qwerty-overlay-mockup.tldr  pyproject.toml
.github/workflows/: ci.yml
.keykapp/: local_harps.sh
docs/: playstation-qwerty-overlay-mockup.json
huffman_arpeggio/: __main__.py  core.py  utils.py  visualization.py
manual_tests/: generate_random_trees.py  test_random_trees.py
scripts/: check_all.sh  run_all.sh  run_local_ci.sh
tests/: test_core.py  test_huffman_arpeggio.py  test_visualization.py
tests/data/: playstation-qwerty-wikipedia-example-input.csv  playstation-qwerty-wikipedia-example-output.csv
