[tool.poetry]
name = "huffman_arpeggio"
version = "0.1.0"
description = ""
authors = ["Helder S Ribeiro <helder@agentofuser.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "huffman_arpeggio"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
