[tool.poetry]
name = "huffman_arpeggio"
version = "0.1.0"
description = ""
authors = ["Helder S Ribeiro <helder@agentofuser.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "huffman_arpeggio"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
count-lines-to-csv = "bin.count_lines_to_csv:main"
huffmanize-zsh-aliases = "bin.huffmanize_zsh_aliases:main"
local-harps = "bin.local_harps:main"